--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 h1{
     margin-top: 50px;
+    margin-bottom: 50px;
     text-align: center;
 }
 
-#inputBox{
-    margin-top: 50px;
+.row{
+    margin-top: 10px;
     font-size: 20px;
 }
 .form-control{
